--- a/index.html
+++ b/index.html
@@ -16,11 +16,22 @@
                         <b><h1 class="title">Altar of Kings</h1></b>
                                                 <p class="author">Anunda. J. Green</p>
                                                 <hr>
-            <p>boo # Figures</p>
+            <h1 id="info">Info</h1>
+            <p>beat opponent in turn based combat</p>
+            <h1 id="difficulty">Difficulty</h1>
+            <p>* x 3</p>
+            <h1 id="characters">Characters</h1>
+            <p>* x 2</p>
+            <h1 id="quality">Quality</h1>
+            <p>* x 3</p>
+            <h1 id="experience">Experience</h1>
+            <p>* x 4.5</p>
+            <h1 id="recommendation">Recommendation</h1>
+            <p>to solve stalemates boo # Figures</p>
         </div>
         <br>
         <div class=content>
-                        <b><h1 class="title">u3231044_11689_Assignment3</h1></b>
+                        <b><h1 class="title">Cards against humanity</h1></b>
                                                 <p class="author">Anunda. J. Green</p>
                                                 <hr>
             <!---
@@ -41,49 +52,40 @@
             journal named "u3231044_11689_Assignment2" with 3 posts containing rich media, such as images, gifs, and/or videos
             u7198321_11689_Assignment1
             --->
-            <h1 id="altar-of-kings">Altar of Kings</h1>
-            <h2 id="info">info</h2>
-            <p>beat opponent in turn based combat</p>
-            <h2 id="difficulty">difficulty</h2>
-            <p>* x 3</p>
-            <h2 id="characters">characters</h2>
+            <h1 id="info">Info</h1>
+            <p>to score points and have a laugh</p>
+            <h1 id="difficulty">Difficulty</h1>
             <p>* x 2</p>
-            <h2 id="quality">quality</h2>
-            <p>* x 3</p>
-            <h2 id="experience">experience</h2>
+            <h1 id="characters">Characters</h1>
+            <p>none</p>
+            <h1 id="quality">Quality</h1>
+            <p>* x 4</p>
+            <h1 id="experience">Experience</h1>
             <p>* x 4.5</p>
-            <h2 id="recommendation">recommendation</h2>
-            <p>to solve stalemates</p>
-            <h1 id="pinkatana">Pinkatana</h1>
-            <h2 id="info-1">info</h2>
+            <h1 id="recommendation">Recommendation</h1>
+            <p>yes</p>
+        </div>
+        <br>
+        <div class=content>
+                        <b><h1 class="title">Pinkatana</h1></b>
+                                                <p class="author">Anunda. J. Green</p>
+                                                <hr>
+            <h1 id="info">Info</h1>
             <p>rescue your lover Purple via skill/presision based platforming</p>
-            <h2 id="difficulty-1">difficulty</h2>
+            <h1 id="difficulty">Difficulty</h1>
             <p>* x 5</p>
-            <h2 id="characters-1">characters</h2>
+            <h1 id="characters">Characters</h1>
             <ul>
             <li>Pink</li>
             <li>Purple</li>
             <li>tutorial cat</li>
             <li>enemies</li>
             </ul>
-            <h2 id="quality-1">quality</h2>
+            <h1 id="quality">Quality</h1>
             <p>* x 4.5</p>
-            <h2 id="experience-1">experience</h2>
+            <h1 id="experience">Experience</h1>
             <p>* x 4.5</p>
-            <h2 id="recommendation-1">recommendation</h2>
-            <p>yes</p>
-            <h1 id="cards-against-humanity">Cards against humanity</h1>
-            <h2 id="info-2">info</h2>
-            <p>to score points and have a laugh</p>
-            <h2 id="difficulty-2">difficulty</h2>
-            <p>* x 2</p>
-            <h2 id="characters-2">characters</h2>
-            <p>none</p>
-            <h2 id="quality-2">quality</h2>
-            <p>* x 4</p>
-            <h2 id="experience-2">experience</h2>
-            <p>* x 4.5</p>
-            <h2 id="recommendation-2">recommendation</h2>
+            <h1 id="recommendation">Recommendation</h1>
             <p>yes</p>
         </div>
         <br>
