--- a/lib/end.html
+++ b/lib/end.html
@@ -1,6 +1,6 @@
             <footer class="content">
                 <p> well, hello there</p>
-                go to <a href="https://skrshe.dev/jnl">skrshe.dev/jnl<a> for more journals
+                <p>go to <a href="https://skrshe.dev/jnl">skrshe.dev/jnl</a> for more journals</p>
             </footer>
         </div>
     </body>
