--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         </div>
         <br>
             <footer class="content">
-                <p> well, hello there</p>
-                go to <a href="https://skrshe.dev/jnl">skrshe.dev/jnl<a> for more journals
+                <p>well, hello there
+                go to <a href="https://skrshe.dev/jnl">skrshe.dev/jnl</a> for more journals</p>
             </footer>
         </div>
     </body>
